# timechain-agent

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Architecture.md  CAPSULE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agent.py  apply_proposal.py  audit.py  bench_retrieval.py  cambium.py  capsule.py  chain.py  chronosynaptic.py  conftest.py  consensus.py  continuum.py  cypher_commands.py  diagnose_index.py  docx_writer.py  extractors.py  faculties.py  file_ingest.py  immune.py  index.html  llm_clients.py  metadata.py  migrate.py  pending_ops.py  poq.py  protected_zones.py  pyproject.toml  recall.py  requirements.txt  retrieval.py  ring_compat.py  run.py  (+14 more)
.github/workflows/: tests.yml
faculties/: emergent.json  modalities.json  senses.json
timechain-web/: webapp.py
timechain_web/: webapp.py
timechain_web/static/: audit.html  commands.html  index.html  theme.css
